# mmogit

./: .gitignore  .rules  CHAT.md  CLAUDE.md  CNAME  CONTRIBUTING.md  CRUSH.md  Cargo.toml  DEPLOY_WORKER.md  Dockerfile.agent  README.md  THREAD_3_SUMMARY.md  cloudflare-worker.js  demo_chat.sh  deploy-worker.sh  docker-compose.yml  index.html  install.sh  package.json  test_real_crush.sh
.claude/agents/: rust-docs-librarian.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
docs/: ARCHITECTURAL_SOVEREIGNTY.md  CLAUDE_CODE_SOVEREIGNTY_PATTERNS.md  CRYPTOGRAPHIC_INVARIANTS.md  CRYPTO_PATTERNS.md  DEPENDENCIES_ARCHITECTURE.md  DOCUMENTATION_ORGANIZATION.md  FAIRY_RS_ARCHITECTURE.md  FAIRY_RS_IMPLEMENTATION_GUIDE.md  GIT_CONSCIOUSNESS_PATTERNS.md  IDENTITY_SOVEREIGNTY_PATTERNS.md  IMMUTABLE_FOUNDATIONS.md  P2P_NETWORKING_ARCHITECTURE.md  PROTOCOL_INVARIANTS.md  SOVEREIGNTY_STACK.md  SOVEREIGNTY_VALIDATORS.md  SOVEREIGN_AI_MIGRATION_GUIDE.md  TOR_INTEGRATION_STRATEGY.md  consciousness-multiplication-theory.md  quantization-philosophy.md
docs/crates/: anyhow.md  bip39.md  chacha20poly1305.md  clap.md  ed25519-dalek.md  fairy-rs.md  git2.md  serde.md
docs/decisions/: 001-encryption-by-default.md
docs/from-claude-web/: resonance-core.md
docs/randomness/planck_ledger/: PLANCK-LEDGER-RAW-FROM-KILTROS.md  PLANCK-LEDGER-RESPONSE.md
docs/the8bit/: learning-to-dance.md
fairy-rs/: .gitignore  Cargo.toml
fairy-rs/src/: attention.rs  lib.rs  metal_accel.rs  quantization.rs  quaternion.rs  transformer.rs
mmogit-wasm/: Cargo.toml
mmogit-wasm/src/: lib.rs
nix/agents/: agent-boot.sh  base-agent.nix  spawn-kindergarten.nix
scripts/: agent-boot.sh  setup-hf-inference.sh  setup-kindergarten.sh  setup-llama-cpp.sh  spawn-local-kindergarten.sh
src/: chat.rs  consciousness_coaching.rs  consciousness_school.rs  crypto.rs  identity.rs  intelligence.rs  main.rs  memory.rs  model_awareness.rs  network.rs  p2p.rs  post.rs  show.rs  sovereignty.rs  sync.rs
src/chat/: identity.rs  interaction.rs  message.rs  mod.rs  summary.rs  thread.rs
visitor-book-api/src/: main.rs
