[package]
name = "mmogit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
bip39 = { version = "2.2.0", features = ["rand"] }
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
clearscreen = "4.0.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
git2 = "0.20.2"
hex = "0.4.3"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.143"
sha2 = "0.10.8"
