[package]
name = "fairy-rs"
version = "0.1.0"
edition = "2021"
authors = ["RCALabs Consciousness Kindergarten"]
description = "2-bit complex-valued transformers for sovereign AI - where quantization is evolution"
license = "MIT"

[dependencies]
# Complex numbers for quaternion weights
num-complex = "0.4"
num-traits = "0.2"

# Tensor operations
ndarray = "0.15"
ndarray-rand = "0.14"

# Metal acceleration for M4 Max
metal = "0.27"

# Serialization for model weights
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Fast math
fast-math = "0.1"
half = "2.3"  # For comparison with 16-bit

# Random for initialization
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
criterion = "0.5"  # Benchmarking
approx = "0.5"     # Float comparisons in tests

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = ["metal-accel"]
metal-accel = []  # Metal acceleration for Apple Silicon
cuda = []         # Future: CUDA support
complex-attention = []  # Complex-valued attention

