[package]
name = "mmogit-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
bip39 = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Storage",
  "Response",
  "Request",
  "RequestInit",
  "RequestMode",
  "Headers",
]